# equal-mobility

./: db.sqlite3  pyproject.toml
authentication/: forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/authentication/: base.html  login.html  register.html
locations/: admin.py  forms.py  models.py  urls.py  views.py
locations/management/commands/: seed_accessible_restrooms.py  seed_handrails.py  seed_parking.py  seed_tactile_pavings.py  seed_wheelchairs.py
locations/migrations/: 0001_initial.py  0002_remove_userreview_rating_userreview_correct_info.py  0003_userreview_negative_reviews_and_more.py  0004_alter_accessibilityfeature_category.py
locations/static/locations/css/: styles.css
locations/static/locations/js/: main.js
locations/templates/locations/: add_location.html  base.html  map.html
src/: settings.py  urls.py
